messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  labels:
    app: messaging-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0     # Ensures no downtime
      maxSurge: 1           # Adds one extra pod during update
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: django-app
          image: your-dockerhub-username/messaging-app:2.0   # Updated image version
          ports:
            - containerPort: 8000
